--- a/catalog.html
+++ b/catalog.html
@@ -144,11 +144,18 @@
           <!-- /.container -->
         </div>
         <!-- /.section-yellow -->
-        <div class="banner-bottom-text container">
-          <span class="bottom-text-main">Главная -</span>
-          <span class="bottom-text-additional">Каталог продукции</span>
+        <div class="bread container">
+          <ul class="bread-ul">
+            <li class="bread-li">
+              <a href="/" class="bread-a">Главная</a>
+            </li>
+            <li class="bread-li">
+              <span class="grey">Каталог продукции</span>
+            </li>
+          </ul>
+          <!-- /.bread-ul -->
         </div>
-        <!-- /.banner-bottom-text -->
+        <!-- /.bread -->
       </section>
       <!-- /.banner  -->
       <div class="catalog-products container">
@@ -173,42 +180,48 @@
             <!-- /.sidebar -->
           </div>
           <!-- /.col-4-md -->
-          <div class="col-md-4">
-            <div class="catalog-card">
-              <div class="catalog-card-header">
-                <img src="/images/img/catalog-card-1.png" alt="Catalog-Card-Image-1" class="catalog-card-image">
-              </div>
-              <!-- /.catalog-card-header -->
-              <div class="catalog-card-title">Кофе</div>
-                <div class="catalog-card-text">Кофе — один из самых популярных и древних напитков на земном шаре. Миллионы людей начинают свой день с чашечки кофе. </div>
-                <div class="card-link-wrapper">
-                  <a href="#" class="catalog-card-link primary-link">
-                    Перейти в магазин
-                  </a>
+          <div class="col-md-8">
+            <div class="row">
+              <div class="col-md-6">
+                <div class="catalog-card">
+                  <div class="catalog-card-header">
+                    <img src="/images/img/catalog-card-1.png" alt="Catalog-Card-Image-1" class="catalog-card-image">
+                  </div>
+                  <!-- /.catalog-card-header -->
+                  <div class="catalog-card-title">Кофе</div>
+                    <div class="catalog-card-text">Кофе — один из самых популярных и древних напитков на земном шаре. Миллионы людей начинают свой день с чашечки кофе. </div>
+                    <div class="card-link-wrapper">
+                      <a href="#" class="catalog-card-link primary-link">
+                        Перейти в магазин
+                      </a>
+                    </div>
+                    <!-- /.card-link-wrapper -->
                 </div>
-                <!-- /.card-link-wrapper -->
-            </div>
-            <!-- /.catalog-card -->
-          </div>
-          <!-- /.col-4-md -->
-          <div class="col-md-4">
-            <div class="catalog-card">
-              <div class="catalog-card-header">
-                <img src="/images/img/catalog-card-2.png" alt="Catalog-Card-Image-2" class="catalog-card-image">
+                <!-- /.catalog-card -->
               </div>
-              <!-- /.catalog-card-header -->
-              <div class="catalog-card-title">Шоколад</div>
-                <div class="catalog-card-text">Натуральный шоколад произведенный по технологии bean to bar - от боба до плитки. Без лецитина. Ручная работа</div>
-                <div class="card-link-wrapper">
-                  <a href="#" class="catalog-card-link primary-link">
-                    Перейти в магазин
-                  </a>
+              <!-- /.col-6-md -->
+              <div class="col-md-6">
+                <div class="catalog-card">
+                  <div class="catalog-card-header">
+                    <img src="/images/img/catalog-card-2.png" alt="Catalog-Card-Image-2" class="catalog-card-image">
+                  </div>
+                  <!-- /.catalog-card-header -->
+                  <div class="catalog-card-title">Шоколад</div>
+                    <div class="catalog-card-text">Натуральный шоколад произведенный по технологии bean to bar - от боба до плитки. Без лецитина. Ручная работа</div>
+                    <div class="card-link-wrapper">
+                      <a href="#" class="catalog-card-link primary-link">
+                        Перейти в магазин
+                      </a>
+                    </div>
+                    <!-- /.card-link-wrapper -->
                 </div>
-                <!-- /.card-link-wrapper -->
+                <!-- /.catalog-card -->
+              </div>
+              <!-- /.col-6-md -->
             </div>
-            <!-- /.catalog-card -->
+            <!-- /.row -->
           </div>
-          <!-- /.col-4-md -->
+          <!-- /.col-md-8 -->
         </div>
         <!-- /.row -->
       </div>
