--- a/catalog.html
+++ b/catalog.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="/images/css/catalog.css">
   <script src="/images/js/fancybox.umd.js" defer></script>
   <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js" defer></script>
+  <script src="/images/js/main.js" defer></script>
   <script src="/images/js/script.js" defer></script>
 </head>
 <body>
@@ -39,11 +40,11 @@
           <div class="col-md-2">
             <div class="link-group">
               <a href = "#" class="user-link primary-link">
-                <img src="/images/img/user.svg" alt="Icon: User" class="user-icon">
+                <img src="/images/img/user.svg" alt="Icon: User" class="js-svg-img">
                 Войти
               </a>
               <a href = "#" class="cart-link">
-                <img src="/images/img/cart.svg" alt="Icon: Cart" class="cart-icon">
+                <img src="/images/img/cart.svg" alt="Icon: Cart" class="js-svg-img">
                 <span class="products-num">3</span>
               </a>
             </div>
@@ -259,10 +260,10 @@
               <div class="social-title">Социальные сети</div>
               <div class="social-media-links">
                 <a href="#" class="social-media-link" target="_blank">
-                  <img src="/images/img/yt.svg" alt="Icon: YouTube" class="social-icon">
+                  <img src="/images/img/yt.svg" alt="Icon: YouTube" class="js-svg-img">
                 </a>
                 <a href="#" class="social-media-link" target="_blank">
-                  <img src="/images/img/inst.svg" alt="Icon: Instagram" class="social-icon">
+                  <img src="/images/img/inst.svg" alt="Icon: Instagram" class="js-svg-img">
                 </a>
               </div>
             </div>
@@ -281,8 +282,8 @@
           <!-- /.phone-num -->
           <a href="#" class="phone-link primary-link">Связать с нами</a>
           <div class="bank-cards">
-            <img src="/images/img/mastercard.svg" alt="Icon: MasterCard" class="bank-card">
-            <img src="/images/img/visa.svg" alt="Icon: Visa" class="bank-card">
+            <img src="/images/img/mastercard.svg" alt="Icon: MasterCard" class="js-svg-img">
+            <img src="/images/img/visa.svg" alt="Icon: Visa" class="js-svg-img">
           </div>
           <!-- /.bank-cards -->
         </div>
