--- a/product.html
+++ b/product.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="/images/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="/images/css/fonts.css">
   <link rel="stylesheet" href="/images/css/product.css">
+  <script src="/images/js/main.js" defer></script>
 </head>
 <body>
   <div class="page-root">
@@ -34,11 +35,11 @@
           <div class="col-md-2">
             <div class="link-group">
               <a href = "#" class="user-link primary-link">
-                <img src="/images/img/user.svg" alt="Icon: User" class="user-icon">
+                <img src="/images/img/user.svg" alt="Icon: User" class="js-svg-img">
                 Войти
               </a>
               <a href = "#" class="cart-link">
-                <img src="/images/img/cart.svg" alt="Icon: Cart" class="cart-icon">
+                <img src="/images/img/cart.svg" alt="Icon: Cart" class="js-svg-img">
                 <span class="products-num">3</span>
               </a>
             </div>
@@ -77,7 +78,7 @@
             <div class="product-card-top">
               <span class="article">Артикул: K-552</span>
             <div class="on-stock">
-              <img src="/images/img/simple-tick.svg" alt="Icon: tick" class="tick-icon">
+              <img src="/images/img/simple-tick.svg" alt="Icon: tick" class="js-svg-img">
               <span class="on-stock-text">Есть в наличии</span>
             </div>
             <!-- /.on-stock -->
@@ -121,9 +122,9 @@
            </div>
            <!-- /.product-weight -->
           <div class="amount">
-            <div class="minus"><img src="/images/img/minus-icon.svg" alt="Icon: Minus" class="minus-icon"></div>
+            <div class="minus"><img src="/images/img/minus-icon.svg" alt="Icon: Minus" class="js-svg-img"></div>
             <div class="num">1</div>
-            <div class="plus"><img src="/images/img/plus-icon.svg" alt="Icon: Plus" class="plus-icon"></div>
+            <div class="plus"><img src="/images/img/plus-icon.svg" alt="Icon: Plus" class="js-svg-img"></div>
           </div>
           <a href="#" class="buy-link primary-link">
             В корзину
@@ -261,10 +262,10 @@
               <div class="social-title">Социальные сети</div>
               <div class="social-media-links">
                 <a href="#" class="social-media-link" target="_blank">
-                  <img src="/images/img/yt.svg" alt="Icon: YouTube" class="social-icon">
+                  <img src="/images/img/yt.svg" alt="Icon: YouTube" class="js-svg-img">
                 </a>
                 <a href="#" class="social-media-link" target="_blank">
-                  <img src="/images/img/inst.svg" alt="Icon: Instagram" class="social-icon">
+                  <img src="/images/img/inst.svg" alt="Icon: Instagram" class="js-svg-img">
                 </a>
               </div>
             </div>
@@ -283,8 +284,8 @@
           <!-- /.phone-num -->
           <a href="#" class="phone-link primary-link">Связать с нами</a>
           <div class="bank-cards">
-            <img src="/images/img/mastercard.svg" alt="Icon: MasterCard" class="bank-card">
-            <img src="/images/img/visa.svg" alt="Icon: Visa" class="bank-card">
+            <img src="/images/img/mastercard.svg" alt="Icon: MasterCard" class="js-svg-img">
+            <img src="/images/img/visa.svg" alt="Icon: Visa" class="js-svg-img">
           </div>
           <!-- /.bank-cards -->
         </div>
