--- a/catalog.html
+++ b/catalog.html
@@ -5,13 +5,13 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Jazz</title>
-  <link rel="stylesheet" href="/images/css/bootstrap-grid.min.css">
-  <link rel="stylesheet" href="/images/css/fancybox.css"/>
-  <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css"/>
+  <link rel="stylesheet" href="/images/bootstrap/bootstrap-grid.min.css">
+  <link rel="stylesheet" href="/images/fancybox/fancybox.css"/>
+  <link rel="stylesheet" href="/images/swiper/swiper-bundle.min.css"/>
   <link rel="stylesheet" href="/images/css/fonts.css">
-  <link rel="stylesheet" href="/images/css/catalog.css">
-  <script src="/images/js/fancybox.umd.js" defer></script>
-  <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js" defer></script>
+  <link rel="stylesheet" href="/images/css/main.css">
+  <script src="/images/fancybox/fancybox.umd.js" defer></script>
+  <script src="/images/swiper/swiper-bundle.min.js" defer></script>
   <script src="/images/js/main.js" defer></script>
   <script src="/images/js/script.js" defer></script>
 </head>
@@ -165,14 +165,14 @@
             <div class="sidebar">
               <div>
                 <a href="#" class="sidebar-item">
-                  <span class="sidebar-item-img"></span>
+                  <img src="/images/img/coffee.svg" alt="Icon: coffee" class="js-svg-img">
                   <span class="sidebar-item-text">Кофе</span>
                 </a>
                 <!-- /.sidebar-item -->
               </div>
               <div>
                 <a href="#" class="sidebar-item">
-                  <span class="sidebar-item-img"></span>
+                  <img src="/images/img/chocolate.svg" alt="Icon: chocolate" class="js-svg-img">
                   <span class="sidebar-item-text">Шоколад</span>
                 </a>
                 <!-- /.sidebar-item -->
