--- a/product.html
+++ b/product.html
@@ -5,10 +5,15 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Jazz</title>
-  <link rel="stylesheet" href="/images/css/bootstrap-grid.min.css">
+  <link rel="stylesheet" href="/images/bootstrap/bootstrap-grid.min.css">
+  <link rel="stylesheet" href="/images/fancybox/fancybox.css"/>
+  <link rel="stylesheet" href="/images/swiper/swiper-bundle.min.css"/>
   <link rel="stylesheet" href="/images/css/fonts.css">
-  <link rel="stylesheet" href="/images/css/product.css">
+  <link rel="stylesheet" href="/images/css/main.css">
+  <script src="/images/fancybox/fancybox.umd.js" defer></script>
+  <script src="/images/swiper/swiper-bundle.min.js" defer></script>
   <script src="/images/js/main.js" defer></script>
+  <script src="/images/js/script.js" defer></script>
 </head>
 <body>
   <div class="page-root">
@@ -91,12 +96,9 @@
           <form action="" class="link-form">
             <span class="referral-link-title">Ваша реферальная ссылка:</span>
             <input type="text" class="referral-link" placeholder="https://columns.app/devarto-ru/valera-6f9">
-            <span class="copy-icon">
-              <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M15.75 15.7493H20.25V3.74933H8.25V8.24933" stroke="#27AE60" stroke-linecap="round" stroke-linejoin="round"/>
-                <path d="M15.75 8.24945H3.75V20.2495H15.75V8.24945Z" stroke="#27AE60" stroke-linecap="round" stroke-linejoin="round"/>
-                </svg>                
-            </span>
+            <div class="copy-icon">
+              <img src="/images/img/copy.svg" alt="Icon: copy" class="js-svg-img">              
+            </div>
           </form>
           <!-- /.product-card-content -->
           <span class="dropdown-title">Выберите вес:</span>
