--- a/product.html
+++ b/product.html
@@ -6,12 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Jazz</title>
   <link rel="stylesheet" href="/images/bootstrap/bootstrap-grid.min.css">
-  <link rel="stylesheet" href="/images/fancybox/fancybox.css"/>
-  <link rel="stylesheet" href="/images/swiper/swiper-bundle.min.css"/>
   <link rel="stylesheet" href="/images/css/fonts.css">
-  <link rel="stylesheet" href="/images/css/main.css">
-  <script src="/images/fancybox/fancybox.umd.js" defer></script>
-  <script src="/images/swiper/swiper-bundle.min.js" defer></script>
+  <link rel="stylesheet" href="/images/css/product.css">
+  <script src="/images/jquery-ui/jquery-3.6.0.min.js" defer></script>
   <script src="/images/js/main.js" defer></script>
   <script src="/images/js/script.js" defer></script>
 </head>
